# JNI-By-Examples

./: CMakeLists.txt  Utilities.cpp  Utilities.h  jnihelper.sh
java/in/derros/jni/: Utilities.java
